# backend

./: .prettierignore  .yarnrc.yml  Cargo.toml  README.md  oxlint.json  package.json  tsconfig.json
.cargo/: config.toml
.devcontainer/: build.sh  devcontainer.json  docker-compose.yml  setup-user.sh
blocksuite/affine/all/: package.json
blocksuite/affine/all/src/components/: tooltip.ts
blocksuite/affine/blocks/attachment/: package.json
blocksuite/affine/blocks/attachment/src/: attachment-block.ts
blocksuite/affine/blocks/bookmark/: package.json
blocksuite/affine/blocks/bookmark/src/: bookmark-block.ts  styles.ts
blocksuite/affine/blocks/callout/: package.json
blocksuite/affine/blocks/code/: package.json
blocksuite/affine/blocks/code/src/: code-block-service.ts  code-block.ts
blocksuite/affine/blocks/data-view/: package.json
blocksuite/affine/blocks/data-view/src/: data-view-block.ts
blocksuite/affine/blocks/database/: package.json
blocksuite/affine/blocks/database/src/: database-block.ts
blocksuite/affine/blocks/divider/: package.json
blocksuite/affine/blocks/edgeless-text/: package.json
blocksuite/affine/blocks/embed/: package.json
blocksuite/affine/blocks/embed-doc/: package.json
blocksuite/affine/blocks/frame/: package.json
blocksuite/affine/blocks/image/: package.json
blocksuite/affine/blocks/image/src/: image-block.ts
blocksuite/affine/blocks/latex/: package.json
blocksuite/affine/blocks/latex/src/: latex-block.ts
blocksuite/affine/blocks/list/: package.json
blocksuite/affine/blocks/list/src/: list-block.ts
blocksuite/affine/blocks/note/: package.json
blocksuite/affine/blocks/paragraph/: package.json
blocksuite/affine/blocks/root/: package.json
blocksuite/affine/blocks/surface/: package.json
blocksuite/affine/blocks/surface-ref/: package.json
blocksuite/affine/components/: package.json
blocksuite/affine/data-view/: package.json
blocksuite/affine/foundation/: package.json
blocksuite/affine/foundation/src/: view.ts
blocksuite/affine/fragments/adapter-panel/: package.json
blocksuite/affine/fragments/doc-title/: package.json
blocksuite/affine/fragments/frame-panel/: package.json
blocksuite/affine/fragments/outline/: package.json
blocksuite/affine/gfx/brush/: package.json
blocksuite/affine/gfx/connector/: package.json
blocksuite/affine/gfx/group/: package.json
blocksuite/affine/gfx/link/: package.json
blocksuite/affine/gfx/mindmap/: package.json
blocksuite/affine/gfx/note/: package.json
blocksuite/affine/gfx/pointer/: package.json
blocksuite/affine/gfx/shape/: package.json
blocksuite/affine/gfx/template/: package.json
blocksuite/affine/gfx/text/: package.json
blocksuite/affine/inlines/comment/src/: view.ts  (+4 more)
blocksuite/affine/inlines/footnote/: package.json
blocksuite/affine/inlines/latex/: package.json
blocksuite/affine/inlines/link/: package.json
blocksuite/affine/inlines/mention/: package.json
blocksuite/affine/inlines/preset/: package.json
blocksuite/affine/inlines/reference/: package.json
blocksuite/affine/model/: package.json
blocksuite/affine/rich-text/: package.json
blocksuite/affine/shared/: package.json
blocksuite/affine/widgets/drag-handle/: package.json
blocksuite/affine/widgets/edgeless-auto-connect/: package.json
blocksuite/affine/widgets/edgeless-dragging-area/: package.json
blocksuite/affine/widgets/edgeless-selected-rect/: package.json
blocksuite/affine/widgets/edgeless-toolbar/: package.json
blocksuite/affine/widgets/edgeless-zoom-toolbar/: package.json
blocksuite/affine/widgets/frame-title/: package.json
blocksuite/affine/widgets/keyboard-toolbar/: package.json  tsconfig.json
blocksuite/affine/widgets/linked-doc/: package.json
blocksuite/affine/widgets/note-slicer/: package.json
blocksuite/affine/widgets/page-dragging-area/: package.json
blocksuite/affine/widgets/remote-selection/: package.json
blocksuite/affine/widgets/scroll-anchoring/: package.json
blocksuite/affine/widgets/slash-menu/: package.json
blocksuite/affine/widgets/toolbar/: package.json
blocksuite/affine/widgets/viewport-overlay/: package.json
blocksuite/integration-test/: package.json
docs/: BUILDING.md  building-desktop-client-app.md  developing-server.md
docs/contributing/: releases.md
docs/reference/: package.json
scripts/: set-version.sh
tools/@types/build-config/: __all.d.ts  package.json
tools/@types/env/: __all.d.ts  package.json
tools/changelog/: package.json
tools/cli/: package.json
tools/cli/src/: affine.ts  bundle.ts  cert.ts  command.ts  dev.ts
tools/cli/src/webpack/: cache-group.ts  html-plugin.ts  index.ts  template.html
tools/commitlint/: package.json
tools/copilot-result/: package.json
tools/playstore-auto-bump/: package.json
tools/utils/: package.json
tools/utils/src/: build-config.ts  types.ts  workspace.gen.ts
(+37 files in other folders)
